# hex-chess

./: Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
hex-chess-bevy/: Cargo.toml
hex-chess-bevy/src/: hex_rect.rs  main.rs
hex-chess-lib/: Cargo.toml
hex-chess-lib/src/: board.rs  coord.rs  game.rs  lib.rs  main.rs  piece.rs
src/: board.rs  coords_utils.rs  game.rs  lib.rs  main.rs  piece.rs
