[package]
name = "hex-chess-bevy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-chess-lib = { path = "../hex-chess-lib" }
bevy = { version = "0.8.1", features = ["wayland"] }
bevy_easings = "0.8.1"
bevy_embedded_assets = "0.4.0"
